# mpi_test

./: CMakeLists.txt  README.md  batch.example  build.sh  mpi_test.c  mpi_test.h  mpi_test_lib.c
CMakeModules/: FindGraphicsMagick.cmake
